# gitreadme

./: README.md  test.cpp  testtest.cpp
RosApp/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
RosApp/devel/lib/pkgconfig/: lidar_align_tool.pc  rostest.pc  selection_patch.pc
RosApp/devel/lib/rostest/: rostest
RosApp/devel/share/lidar_align_tool/cmake/: lidar_align_toolConfig.cmake
RosApp/devel/share/rostest/cmake/: rostestConfig.cmake
RosApp/devel/share/selection_patch/cmake/: selection_patchConfig.cmake
RosApp/src/rostest/: CMakeLists.txt  mainpage.dox  package.xml
RosApp/src/rostest/include/rostest/: init_sub.h  main_window.h  qnode.h  ui_main_window.h
RosApp/src/rostest/launch/: rostest.launch
RosApp/src/rostest/src/: init_sub.cc  main.cc  main_window.cc  qnode.cc
RosApp/src/rostest/ui/: main_window.ui
RosApp/src/selection_patch/: CMakeLists.txt  package.xml  plugin_description.xml
RosApp/src/selection_patch/src/: selection_patch.cpp  selection_patch.h
